# imge

./: .dockerignore  .gitignore  CMakeLists.txt  DESIGN.md  README.md  WEBASSEMBLY_BUILD.md  build-web.sh  go.mod  imge.go  version_embed.go
.github/workflows/: docker-builder.yml  release.yml
cli/: CMakeLists.txt  imge.cpp
cli/templates/: game_main_desktop.cpp  game_main_web.cpp  shell_minimal.html
cmd/game-engine/: main.go
cmd/imge/: main.go
core/: component.go  engine.go  event.go  interfaces.go  object.go  scene.go
core/json/: game.go  scene.go
core/math/: color.go  rect.go  transform.go  vector2.go
engine/components/: collider.go  hitbox.go  image.go  movement.go  sound.go  sprite.go  transform.go
examples/: CMakeLists.txt
examples/simple_game/: main.cpp  scene_data.json
include/imge/: config.hpp
include/imge/components/: Animation.hpp  Hitbox.hpp  Image.hpp
include/imge/core/: Component.hpp  ComponentFactory.hpp  Engine.hpp  Object.hpp  Rect.hpp  Scene.hpp  Singleton.hpp  Vec2.hpp
include/imge/impl/: EmscriptenAudio.hpp  EmscriptenInput.hpp  EmscriptenRenderer.hpp  SDL2Audio.hpp  SDL2Engine.hpp  SDL2Input.hpp  SDL2Renderer.hpp  WebGLEngine.hpp
include/imge/services/: Audio.hpp  Input.hpp  Screen.hpp  Time.hpp
internal/components/: sprite.go  transform.go
internal/core/: component.go  engine.go  interfaces.go  object.go  scene.go
internal/core/json/: component.go  object.go
internal/core/math/: vector2.go
platform/mock/: audio.go  filesystem.go  input.go  platform.go  renderer.go  time.go  window.go
platform/sdl/: audio.go  filesystem.go  input.go  platform.go  renderer.go  time.go  window.go
samples/basic/: game.json
samples/basic/components/: enemy.go  player.go
samples/basic/scenes/: main.scene
src/components/: Animation.cpp  Hitbox.cpp  Image.cpp
src/core/: Component.cpp  ComponentFactory.cpp  Engine.cpp  Object.cpp  Scene.cpp
src/impl/emscripten/: EmscriptenAudio.cpp  EmscriptenInput.cpp  EmscriptenRenderer.cpp  WebGLEngine.cpp
src/impl/sdl2/: SDL2Audio.cpp  SDL2Engine.cpp  SDL2Input.cpp  SDL2Renderer.cpp  main.cpp
src/services/: Audio.cpp  Input.cpp  Screen.cpp
templates/: CMakeLists.txt
templates/minimal_game/: CMakeLists.txt  PlayerController.hpp  main.cpp
tests/: CMakeLists.txt  test_object.cpp  test_scene.cpp
